# rayos

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cornell-box.pbrt
include/: bitmap.h  scene.h
include/geom/: AABB.h  BVH.h  BVHNode.h  primitive.h  quad.h  sphere.h  triangle.h  triangleMesh.h
include/tracer/: brdf.h  hitPoint.h  stochasticRayTracer.h  tracer.h  whittedRayTracer.h
include/util/: camera.h  chrono.h  color.h  light.h  material.h  pbrtParser.h  point3D.h  pointLight.h  rand.h  ray.h  rectLight.h  util.h  vector3D.h
notebooks/: cornell-box-scene-visualizer.ipynb
src/: bitmap.cpp  rayos.cpp  scene.cpp
src/geom/: AABB.cpp  BVH.cpp  BVHNode.cpp  primitive.cpp  quad.cpp  sphere.cpp  triangle.cpp  triangleMesh.cpp
src/tracer/: brdf.cpp  stochasticRayTracer.cpp  tracer.cpp  whittedRayTracer.cpp
src/util/: camera.cpp  chrono.cpp  color.cpp  light.cpp  material.cpp  mt19937ar.cpp  pbrtParser.cpp  point3D.cpp  pointLight.cpp  rand.cpp  ray.cpp  rectLight.cpp  rndGenSSE.cpp  util.cpp  vector3D.cpp
